--- a/index.Rmd
+++ b/index.Rmd
@@ -5,6 +5,14 @@ date: "10/09/2023"
 output: html_document
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning=FALSE)
+```
+### General info
+- GitHub repo (just to show the work): https://github.com/chilly-nk/list-am-scraper 
+- An example of scraped data is in 'scraped_data.csv'
+
+
 ### Decide what to scrape
 
 ```{r}
@@ -13,8 +21,8 @@ output: html_document
 # 60 - Sales
 
 category = 60
-pages <- 1:2
-request <- 1
+pages <- 1:2 # There are usually 250
+request <- 1 # Hypothetical user request from google form responses
 pricesqm <- 5500 # Price cutoff, less than which to be interpreted as mistakenly renting announcements but put under selling ones
 
 ```
@@ -330,7 +338,7 @@ mydata$Price.USD[idpricesqm] <-
 ```
 
 ```{r}
-write_excel_csv(mydata, "mydata.csv")
+# write_excel_csv(mydata, "mydata.csv")
 ```
 
 
@@ -418,7 +426,7 @@ userdata <-
 
 
 ```{r}
-write_excel_csv(mydata, "mydata.csv")
+write_excel_csv(userdata, "scraped_data.csv")
 ```
 
 
